--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
